# infra

./: .ansible-lint  .gitattributes  .gitignore  .gitmodules  .guix-authorizations  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  ansible.cfg  inventory.yaml  netlify.toml  playbook.yml  pyproject.toml  renovate.json  requirements.txt  server_bootstrap.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  ff-bot.yml  labeler.yml
.github/workflows/: authenticate.yaml  dns-deploy.yaml  dns-dry-run.yaml  docs.yaml  lint-ansible.yaml  lint-docs.yaml  lint-kubernetes.yaml  lint.yaml  lint.yml  main.yaml  main.yml  pr_thanks.yaml  projects_automation.yml  prometheus.yaml  status_embed.yaml
ansible/: .ansible-lint  .gitattributes  README.md  ansible.cfg  playbook.yml
ansible/group_vars/all/: linode.yml  nftables.yml
ansible/host_vars/ldap01/: alloy.yml
ansible/host_vars/lovelace/: alloy.yml  dmarc_metrics.yml  munin.yml  nginx.yml  prometheus.yml
ansible/host_vars/turing/: alloy.yml  nginx.yml
ansible/inventory/: hosts.yaml
ansible/local_testing/: README.md  Vagrantfile  hosts.yaml
ansible/roles/: requirements.yml
ansible/roles/alloy/: README.md
ansible/roles/certbot/: README.md
ansible/roles/fail2ban/: README.md
ansible/roles/jitsi/: README.md
ansible/roles/ldap/: README.md
ansible/roles/mongodb/: README.md
ansible/roles/nginx/: README.md
ansible/roles/nginx-ufw/: README.md
ansible/roles/opendkim/: README.md
ansible/roles/postgres/: README.md
ansible/roles/prometheus-blackbox-exporter/: README.md
ansible/roles/prometheus-node-exporter/: README.md
ansible/roles/pydis-mtls/: README.md
ansible/roles/snowflake-proxy/: README.md
dns/: README.md  production.yaml  requirements.txt
dns/zones/: pydis.com.yaml  pydis.org.yaml  pydis.wtf.yaml  pythondiscord.com.yaml  pythondiscord.org.yaml
dns/zones/pydis.com.zone/: main.yaml
dns/zones/pydis.wtf./: box.yaml  root.yaml
dns/zones/pydis.wtf.zone/: box.yaml  mail.yaml  root.yaml
dns/zones/pythondiscord.com.zone/: code-jam.yaml  main.yaml
docs/: README.md  _config.yml  builder.sh  conf.py  config.toml  index.md  index.rst  mkdocs.yml
docs/_general/: index.md  manual-deploys.md
docs/_queries/: index.md  kubernetes.md  loki.md  postgres.md
docs/archetypes/: default.md
docs/content/: _index.md
docs/docs/: getting-help.md  index.md
docs/docs/common-queries/: index.md  kubernetes.md  loki.md  postgresql.md
docs/docs/meeting-notes/: .authors.yml  index.md
docs/docs/onboarding/: access-table.md  index.md  public_folders.md  resources.md  rules.md  tools.md
docs/docs/post-mortems/: index.md
docs/docs/runbooks/: index.md  upgrading-postgresql.md
docs/docs/services/: index.md
docs/docs/tooling/: github-bots.md
docs/general/: index.rst  manual-deploys.rst
docs/meeting_notes/: 2022-04-07.md  2022-04-07.rst  2022-09-18.md  2022-09-18.rst  2022-10-05.md  2022-10-05.rst  2022-10-19.md  2022-10-19.rst  2022-10-26.md  2022-10-26.rst  2022-11-02.md  2022-11-02.rst  2022-11-23.md  2022-11-23.rst  2023-02-08.md  2023-02-08.rst  2023-02-21.md  2023-02-21.rst  2023-02-28.md  2023-02-28.rst  2023-05-16.md  2023-05-16.rst  2023-07-11.md  2023-07-11.rst  2023-07-18.md  2023-07-18.rst  2023-07-25.md  2023-07-25.rst  2023-08-01.md  2023-08-01.rst  2023-08-08.md  2023-08-08.rst  2023-08-22.md  2023-08-22.rst  2023-08-29.md  2023-08-29.rst  2023-09-05.md  2023-09-05.rst  2023-09-12.md  2023-09-12.rst  (+6 more)
docs/meeting_notes/2022-archive/: 2022-04-07.md  2022-09-18.md  2022-10-05.md  2022-10-19.md  2022-10-26.md  2022-11-02.md  2022-11-23.md  index.md
docs/onboarding/: access.md  access.rst  index.rst  resources.md  resources.rst  rules.md  rules.rst  tools.md  tools.rst
docs/overrides/partials/: copyright.html
docs/postmortems/: 2020-12-11-all-services-outage.rst  2020-12-11-postgres-conn-surge.rst  2021-01-10-primary-kubernetes-node-outage.rst  2021-01-12-site-cpu-ram-exhaustion.rst  2021-01-30-nodebalancer-fails-memory.md  2021-01-30-nodebalancer-fails-memory.rst  2021-07-11-cascading-node-failures.md  2021-07-11-cascading-node-failures.rst  index.md  index.rst
docs/queries/: index.rst  kubernetes.rst  loki.rst  postgres.rst
docs/runbooks/: index.rst  postgresql-upgrade.rst
docs/services/: email.rst  index.rst  ldap.rst  postgresql.rst
docs/tooling/: bots.rst  index.rst
group_vars/: all.yml
guix/: .sops.yaml  README.md  channels-lock.scm  deployment.scm  secrets.yaml  turing.scm
guix/guix-acl-keys/: jc.pub  joe-lovelace.pub  lovelace.pub
guix/machines/: turing.scm
guix/resources/: age-key  motd.txt  nftables.conf
guix/services/: common.scm  git-mirror.scm
guix/ssh-keys/: chris-lovelace.pub  chris.pub  jb.pub  jb2.pub
inventory/: README.md  hosts.yaml
k8s/rbac/: cluster-role-bindings.yaml  cluster-roles.yaml  create-user.sh  pydis-netkube.crt
kubernetes/: README.md  ipa-ca-configmap.yaml
kubernetes/cluster-wide-secrets/: README.md  ghcr-pull-secrets.yaml
kubernetes/docs/: Gemfile  README.md  _config.yml
kubernetes/scripts/: create_x509_user_config.py  lint_manifests.py
kubernetes/service-accounts/: internal-tls-issuer.yaml  postgres-issuer.yaml
local_testing/: README.md  Vagrantfile
local_testing/scripts/: push-keys
roles/auditbeat/: README.md
roles/elasticsearch/: README.md
roles/elasticsearch-repos/: README.md
roles/filebeat/: README.md
roles/kibana/: README.md
roles/kibana-nginx/: README.md
roles/nginx/: README.md
roles/nginx-cloudflare-mtls/: README.md
roles/nginx-ufw/: README.md
roles/packetbeat/: README.md
roles/prometheus/: README.md
(+854 files in other folders)
